# hodor

./: .gitignore  Cargo.toml  README.md
config/: default.yaml
e2e/: playwright.config.ts
e2e/back/: package.json
e2e/config/: idp.ts
e2e/e2e/: password-flow.spec.ts
e2e/front/src/: Routes.tsx
e2e/front/src/pages/home/: Home.tsx
e2e/playwright-report/: index.html
e2e/tests/: example.spec.ts
integration_tests/front/: package.json
integration_tests/front/src/pages/login/: Login.tsx
migrations/: 0001_create_users.sql
src/: main.rs
src/config/: app.rs  config.rs  database.rs  logger.rs  mod.rs
src/infra/api/: mod.rs  technical.rs
src/tools/: capitalize.rs
tests/: package.json
tests/e2e/: password-flow.spec.ts
tests/helpers/: form.ts
