[package]
name = "hodor"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
sqlx = { version = "0.8.6", features = [ "runtime-tokio", "macros", "postgres", "sqlite" ] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = "0.3.20"
serde = { version = "1.0.219", features = ["derive"] }
config = "0.15.15"
chrono = "0.4.41"
env_logger = "0.11.8"
log = "0.4.27"
